--- a/client/src/components/Panels/Header/Header.module.scss
+++ b/client/src/components/Panels/Header/Header.module.scss
@@ -1,5 +1,5 @@
 .header {
-  padding: 2rem;
+  padding: 1rem 2rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -43,7 +43,7 @@
       }
 
       &.saveNextButton {
-        background-color: #267af2;
+        background-color: #007bff;
         color: white;
         border: none;
       }
