--- a/client/src/components/Panels/MidPanel/MidPanel.module.scss
+++ b/client/src/components/Panels/MidPanel/MidPanel.module.scss
@@ -3,4 +3,10 @@
   flex-direction: column;
   background-color: #f6f8fa;
   flex: 1;
+  padding: 1rem;
+
+  .flowChart {
+    flex: 1;
+    margin-top: 1rem;
+  }
 }
