--- a/client/src/components/Panels/RightPanel/RightPanel.module.scss
+++ b/client/src/components/Panels/RightPanel/RightPanel.module.scss
@@ -6,6 +6,7 @@
   overflow-y: auto;
   display: flex;
   flex-direction: column;
+  user-select: none;
 
   .header {
     display: flex;
@@ -24,6 +25,7 @@
       background: none;
       cursor: pointer;
       color: #333;
+      padding-right: 0;
     }
   }
 
@@ -37,20 +39,34 @@
 
   .tabs {
     display: flex;
-    margin-bottom: 10px;
+    margin-bottom: 10px; 
 
     .tab {
       flex: 1;
       padding: 10px;
-      border: 1px solid #ddd;
-      border-bottom: none;
       text-align: center;
       cursor: pointer;
       background-color: #f9f9f9;
+      border: 1px solid transparent;
+      border-radius: 4px; 
+      border: 1px solid #ddd;
+      border-radius: 0.3rem;
+
+      &:first-child {
+        border-top-left-radius: 4px;
+        border-bottom-left-radius: 4px; 
+      }
+
+      &:last-child {
+        border-top-right-radius: 4px;
+        border-bottom-right-radius: 4px; 
+      }
 
       &.activeTab {
         background-color: white;
-        border-bottom: 2px solid #007bff;
+        font-weight: 600;
+        border-bottom: 1px solid #007bff;
+        outline: none;
       }
     }
   }
