feat: added loader animation

--- a/client/src/components/Header/BottomNav/BottomNav.module.scss
+++ b/client/src/components/Header/BottomNav/BottomNav.module.scss
@@ -44,3 +44,14 @@
     }
   }
 }
+
+.loaderContainer {
+  position: absolute;
+  height: 82%;
+  width: 66%;
+  top: 8rem;
+  left: 6rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
